# LOVE-

./: .env.dev  .env.prod  Config.json  README.md  bot.py  conftext.py  pyproject.toml  src.rar
data/LoveCuteData/ChatData/: 1.py  new-data.json  old-data.json  编号new-data.json
data/LoveCuteData/CuteImage/: 1.py
data/RustedWarfareData/Course/: 联机.txt
data/RustedWarfareData/GroupCheck/: RW-MATCH.txt  RW-MOD.txt  RW-PLAYER.txt  RW-TEAM.txt
data/gspanel/: qq-uid.json  team-alias.json
data/gspanel/cache/: 108314643.json  110039750.json  117463614.json  124052834.json  132894524.json  139410404.json  155393442.json  179286989.json  185029959.json  201545672.json  221088580.json  226143462.json
data/zhugeData/: 签1.txt  签10.txt  签100.txt  签101.txt  签102.txt  签103.txt  签104.txt  签105.txt  签106.txt  签107.txt  签108.txt  签109.txt  签11.txt  签110.txt  签111.txt  签112.txt  签113.txt  签114.txt  签115.txt  签116.txt  签117.txt  签118.txt  签119.txt  签12.txt  签120.txt  签121.txt  签122.txt  签123.txt  签124.txt  签125.txt  签126.txt  签127.txt  签128.txt  签129.txt  签13.txt  签130.txt  签131.txt  签132.txt  签133.txt  签134.txt  (+344 more)
love/: __init__.py  __main__.py
love/data/Advertisement/: 1.py  1323989187.txt  1419022941.txt  1844869920.txt  1847821097.txt  1974183285.txt  2040385004.txt  2060598058.txt  2094581131.txt  2357969883.txt  2372789770.txt  2547574207.txt  2576274617.txt  2832386141.txt  2838845826.txt  3068782769.txt  3157861771.txt  3164603433.txt  3345483363.txt  339416251.txt  3564226485.txt  log.txt
love/db/: __init__.py
love/plugins/: __init__.py
src/plugins/: __init__.py
(+268 files in other folders)
